* TransConnection: Removed code preventing compilation under Java 1.4. Compilation under Java 6.0 should use 2.x branch of pojava- persistence.